# hermes

./: .gitignore  CMakeLists.txt  README.md  build_fmt.py  hermes.h  main.cpp  main2.cpp
cmake/: Add_Eigen3.cmake  Add_HDF5.cmake  Add_HighFive.cmake  Add_diemer.cmake  Add_fmt.cmake  Add_googletest.cmake  Add_pqxx.cmake  Add_spdlog.cmake  HermesConfig.cmake.in  URL.conf.cmake
cmake/patches/: fmt-windows.patch  hdf5.patch  highfive.patch
src/: CMakeLists.txt  CSVSerializer.cpp  CSVSerializer.h  Field.cpp  Field.h  FieldVisitors.cpp  FieldVisitors.h  Message.cpp  Message.h  Messaging.cpp  Messaging.h  Serializer.cpp  Serializer.h  hermes.h
src/hermes/: ByteArray.h  CMakeLists.txt  CSVSerializer.h  HDF5Serializer.h  Messaging.cpp  Messaging.h  PrintSerializer.h  chrono.h  field.h  field_base.cpp  field_base.h  hermes.h  message.cpp  message.h  serialization_visitor.h  serializer.h  version.h.in  visitor.h
src/hermes/hdf5/: ByteArray.h  HDF5Serializer.h
src/hermes/serializer/: csv_serializer.cpp  csv_serializer.h  print_serializer.cpp  print_serializer.h  psql_serializer.cpp  psql_serializer.h
tests/: CMakeLists.txt  test_byte_serialize.cpp  test_eigenVectorsSerialization.cpp  test_get_version.cpp  test_hdf5PT.cpp  test_hdf5PT_fields.cpp  test_hdf5TB.cpp  test_hdf5_hermes.cpp  test_hermes.cpp  test_serializerDestructor.cpp
tests/postgresql/: CMakeLists.txt  README.md  docker-compose.yml  test_postgresql.cpp
